--- a/css魔法/形状/椭圆.html
+++ b/css魔法/形状/椭圆.html
@@ -24,11 +24,13 @@
 			.test4{border-radius:100%  0 0 0;}
 			.test5{border-radius:20px 20px 0 20px;}
 			.test6{border-radius:20px 30px 0 40px;}
+			.test7{border-radius:100%   15px 15px 100%;}
+			.test8{width:0;height:0;border-radius: 50%;border:50px solid #ccc;border-right-color:#f99;}
 		</style>
 	</head>
 	<body>
-		<h3>难点在于：可以设置四个圆角处的圆弧半径 可以是% 也可以是像素</h3>
-		<p>%：每一个角的百分号 会同时作用于两条边，按照每条边的比例做弧线</p>
+		<h3>难点在于：可以设置四个圆角处的圆弧半径 可以是% 也可以是像素 </h3>
+		<p>%：每一个角的百分号 会同时作用于两条边，按照每条边的比例做弧线 分解成垂直半径和水平半径</p>
 
 		<div class="wraper">
 			<h2 class="text-center title">椭圆衍生：border-radius</h2>
@@ -38,11 +40,13 @@
 			<div class="ellipse test4"></div>
 			<div class="ellipse test5"></div>
 			<div class="ellipse test6"></div>
+			<div class="ellipse test7"></div>
+			<div class="ellipse test8"></div>
 		</div>
 		
 		<div class="wraper">
 			<h2 class="text-center title">梯形</h2>
-			
+
 		</div>
 		
 	</body>
